test/functions/whereClauses/whereClauseNonParamGeneric.good
whereClauseNonParamGeneric.chpl:1: In function 'foo':
whereClauseNonParamGeneric.chpl:1: error: a 'where' clause expression must be a 'param', but got a non-'param'
  whereClauseNonParamGeneric.chpl:1: called as foo(x: int(64), y: int(64))
